k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linksnap-ingress
  namespace: linksnap
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/limit-rps: "50"
    nginx.ingress.kubernetes.io/limit-connections: "20"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lksnp.qzz.io
      secretName: linksnap-tls-cert
  rules:
    - host: lksnp.qzz.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linksnap-frontend-service
                port:
                  number: 80
